test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-unmanaged-from-oknil-nil.chpl
//  lhs: unmanaged!  rhs: nil?  error: nlb

class MyClass {  var x: int;  }



record MyRecord {
  var lhs: unmanaged MyClass = nil;
}

var myr = new MyRecord();

compilerError("done");
